--- a/src/output.css
+++ b/src/output.css
@@ -30,11 +30,6 @@
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-700: oklch(48.8% 0.243 264.376);
-<<<<<<< HEAD
-    --color-purple-500: oklch(62.7% 0.265 303.9);
-    --color-purple-900: oklch(38.1% 0.176 304.987);
-=======
->>>>>>> 652b1e5b842050db2d40e0bcafde57fc2d15c80d
     --color-pink-500: oklch(65.6% 0.241 354.308);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
@@ -248,6 +243,9 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-1 {
+    top: calc(var(--spacing) * 1);
+  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
@@ -262,6 +260,9 @@
   }
   .bottom-5 {
     bottom: calc(var(--spacing) * 5);
+  }
+  .left-1 {
+    left: calc(var(--spacing) * 1);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
@@ -289,6 +290,24 @@
   }
   .row-start-2 {
     grid-row-start: 2;
+  }
+  .container {
+    width: 100%;
+    @media (width >= 40rem) {
+      max-width: 40rem;
+    }
+    @media (width >= 48rem) {
+      max-width: 48rem;
+    }
+    @media (width >= 64rem) {
+      max-width: 64rem;
+    }
+    @media (width >= 80rem) {
+      max-width: 80rem;
+    }
+    @media (width >= 96rem) {
+      max-width: 96rem;
+    }
   }
   .m-0 {
     margin: calc(var(--spacing) * 0);
@@ -389,9 +408,6 @@
   .ml-10 {
     margin-left: calc(var(--spacing) * 10);
   }
-  .ml-15 {
-    margin-left: calc(var(--spacing) * 15);
-  }
   .ml-20 {
     margin-left: calc(var(--spacing) * 20);
   }
@@ -416,15 +432,9 @@
   .hidden {
     display: none;
   }
-<<<<<<< HEAD
-  .inline-block {
-    display: inline-block;
-  }
   .table {
     display: table;
   }
-=======
->>>>>>> 652b1e5b842050db2d40e0bcafde57fc2d15c80d
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
@@ -455,12 +465,6 @@
   .h-64 {
     height: calc(var(--spacing) * 64);
   }
-<<<<<<< HEAD
-  .h-150 {
-    height: calc(var(--spacing) * 150);
-  }
-=======
->>>>>>> 652b1e5b842050db2d40e0bcafde57fc2d15c80d
   .h-160 {
     height: calc(var(--spacing) * 160);
   }
@@ -478,6 +482,9 @@
   }
   .min-h-screen {
     min-height: 100vh;
+  }
+  .w-2 {
+    width: calc(var(--spacing) * 2);
   }
   .w-2\/4 {
     width: calc(2/4 * 100%);
@@ -530,6 +537,13 @@
   .flex-1 {
     flex: 1;
   }
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .-translate-x-1 {
+    --tw-translate-x: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
@@ -540,6 +554,10 @@
   }
   .translate-x-4 {
     --tw-translate-x: calc(var(--spacing) * 4);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1 {
+    --tw-translate-y: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-1\/2 {
@@ -571,15 +589,6 @@
   }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-  .grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-  .grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-  .grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
   .grid-cols-\[1\.5fr_\.9fr\] {
     grid-template-columns: 1.5fr .9fr;
@@ -771,12 +780,6 @@
   .bg-pink-500 {
     background-color: var(--color-pink-500);
   }
-  .bg-purple-500 {
-    background-color: var(--color-purple-500);
-  }
-  .bg-red-500 {
-    background-color: var(--color-red-500);
-  }
   .bg-sky-100 {
     background-color: var(--color-sky-100);
   }
@@ -798,15 +801,9 @@
   .bg-yellow-300 {
     background-color: var(--color-yellow-300);
   }
-<<<<<<< HEAD
-  .bg-yellow-500 {
-    background-color: var(--color-yellow-500);
+  .bg-\[url\(\'\/images\/\'\)\] {
+    background-image: url('/images/');
   }
-  .bg-\[url\(\'\/background\.svg\'\)\] {
-    background-image: url('/background.svg');
-  }
-=======
->>>>>>> 652b1e5b842050db2d40e0bcafde57fc2d15c80d
   .bg-\[url\(\'\/images\/Foumban-palace\.jpg\'\)\] {
     background-image: url('/images/Foumban-palace.jpg');
   }
@@ -822,11 +819,56 @@
   .bg-\[url\(\'\/images\/Reunification-Monument\.jpg\'\)\] {
     background-image: url('/images/Reunification-Monument.jpg');
   }
+  .bg-\[url\(\'\/images\/dja\/1\.png\'\)\] {
+    background-image: url('/images/dja/1.png');
+  }
+  .bg-\[url\(\'\/images\/face\.jg\'\)\] {
+    background-image: url('/images/face.jg');
+  }
+  .bg-\[url\(\'\/images\/face\.jpg\'\)\] {
+    background-image: url('/images/face.jpg');
+  }
+  .bg-\[url\(\'\/images\/face\.ng\'\)\] {
+    background-image: url('/images/face.ng');
+  }
+  .bg-\[url\(\'\/images\/face\.pg\'\)\] {
+    background-image: url('/images/face.pg');
+  }
   .bg-\[url\(\'\/images\/face\.png\'\)\] {
     background-image: url('/images/face.png');
   }
   .bg-\[url\(\'\/images\/hero\.png\'\)\] {
     background-image: url('/images/hero.png');
+  }
+  .bg-\[url\(\'\/images\/kribi\/2\'\)\] {
+    background-image: url('/images/kribi/2');
+  }
+  .bg-\[url\(\'\/images\/kribi\/2\.\'\)\] {
+    background-image: url('/images/kribi/2.');
+  }
+  .bg-\[url\(\'\/images\/kribi\/2\.jpeg\'\)\] {
+    background-image: url('/images/kribi/2.jpeg');
+  }
+  .bg-\[url\(\'\/images\/lamido\'\)\] {
+    background-image: url('/images/lamido');
+  }
+  .bg-\[url\(\'\/images\/lamido\/\'\)\] {
+    background-image: url('/images/lamido/');
+  }
+  .bg-\[url\(\'\/images\/lamido\/2\'\)\] {
+    background-image: url('/images/lamido/2');
+  }
+  .bg-\[url\(\'\/images\/lamido\/2\.\'\)\] {
+    background-image: url('/images/lamido/2.');
+  }
+  .bg-\[url\(\'\/images\/lamido\/2\.jpeg\'\)\] {
+    background-image: url('/images/lamido/2.jpeg');
+  }
+  .bg-\[url\(\'\/images\/north\.jpg\'\)\] {
+    background-image: url('/images/north.jpg');
+  }
+  .bg-\[url\(\'\/images\/south\.jpg\'\)\] {
+    background-image: url('/images/south.jpg');
   }
   .bg-\[url\(\'\/images\/trend\.png\'\)\] {
     background-image: url('/images/trend.png');
@@ -834,12 +876,6 @@
   .bg-\[url\(\'\/images\/will-stay\.svg\'\)\] {
     background-image: url('/images/will-stay.svg');
   }
-<<<<<<< HEAD
-  .bg-\[url\(background\.svg\)\] {
-    background-image: url(background.svg);
-  }
-=======
->>>>>>> 652b1e5b842050db2d40e0bcafde57fc2d15c80d
   .bg-cover {
     background-size: cover;
   }
@@ -1011,17 +1047,14 @@
   .uppercase {
     text-transform: uppercase;
   }
+  .underline {
+    text-decoration-line: underline;
+  }
   .placeholder-gray-400 {
     &::placeholder {
       color: var(--color-gray-400);
     }
   }
-<<<<<<< HEAD
-  .bg-blend-darken {
-    background-blend-mode: darken;
-  }
-=======
->>>>>>> 652b1e5b842050db2d40e0bcafde57fc2d15c80d
   .shadow {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -1046,8 +1079,16 @@
     --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .backdrop-blur-md {
     --tw-backdrop-blur: blur(var(--blur-md));
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
+  .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
@@ -1559,6 +1600,11 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-backdrop-blur {
   syntax: "*";
   inherits: false;
@@ -1618,14 +1664,6 @@
   inherits: false;
   initial-value: 1;
 }
-<<<<<<< HEAD
-=======
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
->>>>>>> 652b1e5b842050db2d40e0bcafde57fc2d15c80d
 @keyframes bounce {
   0%, 100% {
     transform: translateY(-25%);
@@ -1667,6 +1705,7 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
       --tw-backdrop-blur: initial;
       --tw-backdrop-brightness: initial;
       --tw-backdrop-contrast: initial;
@@ -1681,10 +1720,6 @@
       --tw-scale-x: 1;
       --tw-scale-y: 1;
       --tw-scale-z: 1;
-<<<<<<< HEAD
-=======
-      --tw-outline-style: solid;
->>>>>>> 652b1e5b842050db2d40e0bcafde57fc2d15c80d
     }
   }
 }
